# Imaging-and-Detection-simulation-and-data-analysis

./: .gitignore  README.md
Coherent-Diffractive-Imaging/PhaseDiverse_CDI/: Changelog  LICENSE  Makefile  Makefile.in  README  config.status  configure  configure.in  svn_info_cxs.txt
Coherent-Diffractive-Imaging/PhaseDiverse_CDI/doc/: Doxyfile  README  doxygen.css  mainpage.h
Coherent-Diffractive-Imaging/PhaseDiverse_CDI/doc/latex/: BaseCDI_8h.tex  BaseCDI_8h__dep__incl.eps  BaseCDI_8h__dep__incl.md5  CDI__reconstruction_8c.aux  CDI__reconstruction_8c.tex  ComplexConstraints__example_8c.aux  ComplexConstraints__example_8c.tex  Complex__2D_8h.aux  Complex__2D_8h.tex  Complex__2D_8h__dep__incl.eps  Complex__2D_8h__dep__incl.md5  Config_8h.aux  Config_8h.tex  Config_8h__dep__incl.eps  Config_8h__dep__incl.md5  Double__2D_8h.aux  Double__2D_8h.tex  Double__2D_8h__dep__incl.eps  Double__2D_8h__dep__incl.md5  FresnelCDI_8h.aux  FresnelCDI_8h.tex  FresnelCDI_8h__dep__incl.eps  FresnelCDI_8h__dep__incl.md5  FresnelCDI__WF_8h.aux  FresnelCDI__WF_8h.tex  FresnelCDI__WF_8h__dep__incl.eps  FresnelCDI__WF_8h__dep__incl.md5  FresnelCDI__WF__example_8c.aux  FresnelCDI__WF__example_8c.tex  FresnelCDI__example_8c.aux  FresnelCDI__example_8c.tex  FresnelCDI__simulation__example_8c.aux  FresnelCDI__simulation__example_8c.tex  PartialCDI_8h.aux  PartialCDI_8h.tex  PartialCDI_8h__dep__incl.eps  PartialCDI_8h__dep__incl.md5  PartialCDI__example_8c.aux  PartialCDI__example_8c.tex  PartialCDI__simulation__example_8c.aux  (+95 more)
Coherent-Diffractive-Imaging/PhaseDiverse_CDI/doc/manual/: IDL_interface.tex  Makefile  cxs_class_diagram.eps  cxs_logo.eps  nadia.bib  nadia.cls  nadia.tex
Coherent-Diffractive-Imaging/PhaseDiverse_CDI/include/: BaseCDI.h  Complex_2D.h  Config.h  Double_2D.h  FresnelCDI.h  FresnelCDI_WF.h  PartialCDI.h  PartialCharCDI.h  PhaseDiverseCDI.h  PlanarCDI.h  PolyCDI.h  TransmissionConstraint.h  io.h  utils.h
Coherent-Diffractive-Imaging/PhaseDiverse_CDI/interfaces/: README
Coherent-Diffractive-Imaging/PhaseDiverse_CDI/interfaces/idl/: IDL_interface.c  Makefile  Makefile.in  NADIA_interface.pro  README  fresnel_example.pro  partial_char_example.pro  partial_example.pro  phase_diverse_example.pro  planar_example.pro  poly_example.pro
Coherent-Diffractive-Imaging/PhaseDiverse_CDI/src/: BaseCDI.c++  Complex_2D.c++  Config.c++  FresnelCDI.c++  FresnelCDI_WF.c++  Makefile  Makefile.in  PartialCDI.c++  PartialCharCDI.c++  PhaseDiverseCDI.c++  PlanarCDI.c++  PolyCDI.c++  README  TransmissionConstraint.c++  io_cplx.c  io_dbin.c  io_hdf.c  io_ppm.c  io_spec.c  io_tiff.c  utils.c
Coherent-Diffractive-Imaging/PhaseDiverse_CDI/tools/: CDI_reconstruction.c  Makefile  Makefile.in  PhaseDiverseFresnelRec.c  README  cplx2dbin.c  cplx2ppm.c  dbin2ppm.c  dbin2tiff.c  hdf2ppm.c  tiff2ppm.c
Coherent-Diffractive-Imaging/Planar_and_Fresnel_CDI/: PhaseDiverse_APSAUG11_GAMS_Henry (1).c
Coherent-Diffractive-Imaging/Planar_and_Fresnel_CDI/cxs_software/: Changelog  Makefile  Makefile.in  README  config.status  configure  configure.in  svn_info_cxs.txt
Coherent-Diffractive-Imaging/Planar_and_Fresnel_CDI/cxs_software/doc/: Doxyfile  Makefile  mainpage.h
Coherent-Diffractive-Imaging/Planar_and_Fresnel_CDI/cxs_software/examples/: FresnelCDI_WF_example.c  FresnelCDI_example.c  FresnelCDI_simulation_example.c  Fresnel_NAS.c  Makefile  Makefile.in  PlanarCDI_example.c  PlanarCDI_example.sh  PlanarCDI_simulation_example.c  README  WF_Fresnel_NAS _new_setup.c~  fresnel_example.config  planar_example.config  real_example_iteration_250.ppm  real_example_iteration_300.ppm  real_example_iteration_350.ppm  real_example_iteration_400.ppm
Coherent-Diffractive-Imaging/Planar_and_Fresnel_CDI/cxs_software/examples/Fresnel_NAS_pics/: FCDI_HEI_2048_16.tiff  FCDI_HEI_2048_16_smooth.tiff  FCDI_HEI_2048_16_support.tiff  FCDI_HEI_2048_8.tiff  FCDI_HEI_2048_8_Rectangle_Support.tiff  FCDI_HEI_2048_8_SHAPE_SUPPORT.tiff  FCDI_HEI_2048_8_smooth.tiff  FCDI_HEI_2048_8_wf_SUPPORT.tiff  F_G_MAG  F_T_1.txt  F_T_5.txt  Fresnel_NAS.c  OBJECT_C_X_S.tiff  Rec_&_True_TF_MAX_MIN.txt  SNR_EM.txt  TEST_ILL  TEST_WF_ls  TI_MAG.tiff  Trueimage.tiff  WF_rec_AMP.tiff  WF_rec_sam_MAG.tiff  forward_projection.tiff  magnitude_check.tiff  sim_intensity.tiff  tfd_PH.tiff  trans_phase_input.tiff
Coherent-Diffractive-Imaging/Planar_and_Fresnel_CDI/cxs_software/examples/Planar_NAS_pics/: OUTPUT4.txt  OUTPUT5.txt  OUTPUT8.txt  SNR_EM.txt
Coherent-Diffractive-Imaging/Planar_and_Fresnel_CDI/cxs_software/examples/SNR_EM_C/: SNR_EM.txt
Coherent-Diffractive-Imaging/Planar_and_Fresnel_CDI/cxs_software/examples/image_files/: CXS_1024.tif  CXS_1024_SUPPORT_1.tif  FCDI_data.tiff  FCDI_wf_data.tiff  GEOM_1024.tif  GEOM_1024_SUPPORT_1.tif  HEI_1024_2.tif  HEI_1024_CXS.tif  HEI_2048_16.tiff  HEI_2048_16_support.tiff  OBJ2.tif  (+39 more)
Coherent-Diffractive-Imaging/Planar_and_Fresnel_CDI/cxs_software/include/: Config.h  Double_2D.h  FresnelCDI.h  PlanarCDI.h  io.h
Coherent-Diffractive-Imaging/Planar_and_Fresnel_CDI/cxs_software/interfaces/: README
Coherent-Diffractive-Imaging/Planar_and_Fresnel_CDI/cxs_software/src/: Complex_2D.c++  Complex_2D.h  Config.c++  Double_2D.c++  FourierT.c++  FourierT.h  FresnelCDI.c++~  FresnelCDI.h~  FresnelCDI_WF.c++  FresnelCDI_WF.h  Makefile  Makefile.in  PlanarCDI.c++  README  io_cplx.c  io_dbin.c  io_hdf.c  io_ppm.c  io_tiff.c
Coherent-Diffractive-Imaging/Planar_and_Fresnel_CDI/cxs_software/tools/: CDI_reconstruction.c  Makefile  Makefile.in  README  cplx2dbin.c  cplx2ppm.c  dbin2ppm.c  dbin2tiff.c  hdf2ppm.c  tiff2ppm.c
Coherent-Diffractive-Imaging/workbook/: PartialCDI_simulation_example.c  PartialCharCDI_simulation_example.c  PlanarCDI_example.c  PlanarCDI_simulation_example.c  PolyCDI_example.c  README  pbs-script.txt
Coherent-Diffractive-Imaging/workbook/image_files/: part_data.tiff  poly_support.tiff  spectrum.txt
Coherent-Diffractive-Imaging/workbook/image_files/.svn/: all-wcprops  entries
Coherent-Diffractive-Imaging/workbook/image_files/phasediverse_data/: README.txt  params_A.txt  params_B.txt  params_F.txt
(+42 files in other folders)
